Implement paging properly and add size parameter on search response by default